--- a/drawer.html
+++ b/drawer.html
@@ -44,7 +44,7 @@
             <div class="address_code">
               <p class="sub_title">YOUR DEPOSIT ADDRESS</p>
               <div class="transfer_code">
-                <div class="select_symbol p-3 bg-light">
+                <div class="select_symbol p-3">
                   <img src="./images/avax.svg" class="symbol" />
                   <div class="symbol_name">
                     <p class="mb-0">Tether</p>
@@ -52,7 +52,7 @@
                   </div>
                 </div>
                 <div class="qr_code">
-                  <img src="./images/qr_code.png" />
+                  <img src="./images/qr_code_wihte.png" />
                 </div>
 
                 <ul class="mt-2">
@@ -94,7 +94,7 @@
 
         <div class="tab-pane fade w-100" id="profile-tab-pane">
           <div class="mt-4 withdrawBoxes" id="withdraw1">
-            <h5 class="conform_small">Are you sure</h5>
+            <h5 class="conform_small white">Are you sure</h5>
             <h6 class="conform_text">Do you want to procced</h6>
 
             <button class="boost_btn primary w-100 next-btnWithdraw">Next</button>
@@ -104,7 +104,7 @@
             <p class="sub_title">Current balance: 5,826.11 USDT</p>
 
             <div class="address_code bn">
-              <label class="label" style="margin-top: 1.5rem">Amount</label>
+              <label class="label white" style="margin-top: 1.5rem">Amount</label>
               <input type="number" placeholder="Capital" class="input_filed w-100" />
               <div class="percantage_box">
                 <div class="percentage">
@@ -131,7 +131,7 @@
 
             <p class="sub_title" style="margin-top: 1.5rem">Pay to</p>
             <div class="address_code bn">
-              <label class="label" style="margin-top: 1.5rem">Wallet Address</label>
+              <label class="label white" style="margin-top: 1.5rem">Wallet Address</label>
               <input type="number" placeholder="Capital" class="input_filed w-100" />
 
               <div class="tips_box">
@@ -191,7 +191,7 @@
 
           <div class="mt-4 withdrawBoxes" id="withdraw4" style="display: none;">
             <p class="sub_title text-center e">Withdraw in progress</p>
-            <h3 class="title_big text-center ">350 USDT</h3>
+            <h3 class="title_big text-center white">350 USDT</h3>
 
             <div class="address_code">
               <!-- Summary -->
@@ -199,15 +199,15 @@
               <ul class="summary_list">
                 <li>
                   <p>Currency:</p>
-                  <span>Tether</span>
+                  <span class="white">Tether</span>
                 </li>
                 <li>
                   <p>Address:</p>
-                  <span>TEjrPLnSKWvvbwaSusMEEVgUCS3AM1YXHt</span>
+                  <span class="white">TEjrPLnSKWvvbwaSusMEEVgUCS3AM1YXHt</span>
                 </li>
                 <li>
                   <p>Network:</p>
-                  <span>Tron (TRC20)</span>
+                  <span class="white">Tron (TRC20)</span>
                 </li>
               </ul>
 
@@ -217,11 +217,11 @@
               <ul class="summary_list">
                 <li>
                   <p>Date:</p>
-                  <span>October 4, 2023 at 6:28 AM</span>
+                  <span class="white">October 4, 2023 at 6:28 AM</span>
                 </li>
                 <li>
                   <p>Transition type:</p>
-                  <span>Withdraw</span>
+                  <span class="white">Withdraw</span>
                 </li>
               </ul>
               <div class="grid-container mt-4">
@@ -320,7 +320,7 @@
           </div>
           <div class="modal_body">
             <div id="addSymbol1" class="addSymbol">
-              <h5 class="conform_small">Are you sure</h5>
+              <h5 class="conform_small ">Are you sure</h5>
               <h6 class="conform_text">Do you want to procced</h6>
 
               <div class="d-flex align-content-center justify-content-center mt-4">
