--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.theme.min.css" />
     <link rel="stylesheet" href="./css/app/app.css">
-    <link rel="stylesheet" href="./css//balance/balance.css">
+    <link rel="stylesheet" href="./css/balance/balance.css">
   </head>
 
   <body>
@@ -136,9 +136,7 @@
               </div>
               <div class="col-8">
                 <div class="header_menu">
-                  <button class="deposit_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
-                    Deposit
-                  </button>
+                  <button class="deposit_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">Deposit</button>
 
                   <div class="dropdown notification">
                     <button class="btn btn-secondary notify_btn" type="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
@@ -253,7 +251,7 @@
                       </svg>
                     </button>
                   </div>
-                  <h4 class="amount">$1200.00</h4>
+                  <h4 class="amount"><span>$1200.</span><span>00</span></h4>
 
                 </div>
               </div>
@@ -269,46 +267,40 @@
                   </div>
                   <h4 class="amount dark">$1200.00</h4>
                   <p class="amount_small dark">%</p>
-
-                  <svg class="icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" xml:space="preserve">
-                    <path fill="currentColor" d="M54.954,20.964c0.607,0.133,1.38,0.209,2.018-0.018c0.716,0.07,1.322,1.788,2.697,0.942c0.549-0.325,0.56-1.488,1.62-1.794  c0.806,0.183,0.815,0.861,1.556,1.745c1.096,0.806,1.706-0.294,2.673-0.894c0.628,0.178,1.497,0.187,2.105,0.02  c-0.658,0.388-1.488,1.682-2.139,2.463c-0.703,0.837-1.632,1.605-1.767,3.013H58.86c-0.147-1.451-1.097-2.2-1.825-3.081  C56.401,22.575,55.581,21.328,54.954,20.964z M15,75.545V53.44h6.14v22.105H15z M80.433,70.093  c-5.562,4.654-8.192,6.157-14.145,7.661c-3.211,0.838-11.978,2.257-13.401,2.147c-11.272-1.267-16.456-8.351-29.906-7.663V56.628  c2.495-0.719,7.278-3.034,8.106-3.302c4.104-1.696,7.643-0.692,11.175,1.104c0.11,0.096,0.242,0.166,0.39,0.201  c3.793,1.988,7.601,4.807,12.114,6.093c1.813,0.677,3.286,1.309,4.518,1.936c5.923,2.721,5.868,7.765-0.657,6.966  c-2.011-0.142-4.913-1.434-7.294-2.643c-3.741-1.626-6.602-2.049-9.146-2.077c-1.595,0.068-1.596,0.009-2.249,0.264  c-0.752,0.434-0.434,1.631,0.402,1.696c2.544-0.318,5.467,0.084,7.916,0.907c5.592,2.152,10.105,5.208,14.943,3.109  c1.05-0.126,3.731-0.226,5.568-0.618c1.154-0.159,2.734-0.97,4.378-2.001c0.812-0.445,1.569-0.95,2.255-1.506  c1.958-1.372,3.768-2.775,4.794-3.45c1.793-1.006,4-0.882,4.632,0.278C85.878,65.34,81.847,68.826,80.433,70.093z M78.763,53.124  c-0.689-12.398-8.998-20.762-14.241-24.842c-0.63-0.001-5.839,0.001-6.466,0c-5.244,4.08-13.552,12.445-14.24,24.842  c-0.002,0.024-0.003,0.048-0.004,0.073c2.268,1.232,4.471,2.665,6.703,3.773c4.589,2.514,16.856,4.664,14.642,11.911  c3.208-0.363,3.9-0.228,6.788-2.044c0.042-0.034,0.088-0.063,0.137-0.089c0.009-0.005,0.018-0.01,0.027-0.015  c0.63-0.401,1.364-0.892,2.246-1.497C77.577,62.557,79.061,58.483,78.763,53.124z M65.413,54.59  c-0.734,0.609-1.65,0.979-2.748,1.111v1.222h-2.747v-1.36c-1.497-0.329-2.882-1.081-4.152-2.256l1.852-2.27  c0.799,0.7,1.565,1.213,2.301,1.541c0.645,0.287,1.266,0.431,1.861,0.431c0.338,0,0.634-0.043,0.885-0.129  c0.174-0.059,0.326-0.139,0.458-0.239c0.325-0.248,0.487-0.58,0.487-0.998c0-0.418-0.173-0.75-0.517-0.996  c-0.109-0.078-0.252-0.156-0.429-0.234c-0.382-0.169-0.923-0.341-1.622-0.512c-0.401-0.096-0.776-0.198-1.124-0.308  c-1.056-0.332-1.866-0.731-2.43-1.195c-0.75-0.617-1.125-1.586-1.125-2.907c0-1.321,0.475-2.34,1.424-3.056  c0.612-0.463,1.322-0.775,2.131-0.94v-1.44h2.747v1.412c0.488,0.079,0.976,0.203,1.465,0.37c0.929,0.318,1.739,0.77,2.429,1.354  l-1.573,2.27c-0.758-0.575-1.531-0.969-2.32-1.183c-0.469-0.127-0.943-0.191-1.423-0.191c-0.517,0-0.926,0.123-1.225,0.368  c-0.035,0.029-0.068,0.059-0.099,0.09c-0.233,0.233-0.349,0.529-0.349,0.886c0,0.323,0.116,0.594,0.349,0.811  c0.059,0.055,0.125,0.106,0.198,0.155c0.365,0.239,1.208,0.522,2.529,0.847c0.007,0.002,0.013,0.003,0.02,0.005  c1.312,0.326,2.33,0.811,3.057,1.459c0.73,0.651,1.095,1.6,1.095,2.847C66.817,52.801,66.349,53.814,65.413,54.59z" />
-                  </svg>
                 </div>
               </div>
+
               <div class="col-lg-4 mb-4 mb-lg-0">
                 <div class="card_simple green">
-                  <div class="page_title">
-                    <span class="dark">Total Earnings</span>
+                  <div class="d-flex align-items-center justify-content-between">
+                    <div class="page_title">
+                      <span class="dark">7 Days Earnings</span>
+                    </div>
+                    <h4 class="amount filled mt-0">$1200.00</h4>
+                  </div>
 
-                    <div class="d-flex align-items-center">
-                      <select name="" class="input_filed me-3 transparent" id="">
-                        <option value="Today">Today</option>
-                        <option value="7 Day">7 Days</option>
-                        <option value="10 Day">30 Days</option>
-                        <option value="Lifetime">Lifetime</option>
-                      </select>
-
-                      <!-- <button class="dropdown_btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" role="button" aria-controls="offcanvasRight">
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path d="M6 12H18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                          <path d="M12 18V6" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-                        </svg>
-                      </button> -->
+                  <div class="d-flex align-items-center">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">Daily</label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">Weekly</label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">Monthly</label>
+                    </div>
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                      <label class="form-check-label" for="flexCheckDefault">Lifetime</label>
                     </div>
                   </div>
-                  <h4 class="amount dark">$1200.00</h4>
-                  <p class="amount_small dark">%</p>
-
-                  <svg class="icons" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 42 42" xml:space="preserve">
-                    <path fill="currentColor" d="M38.567,23.169c0,0,0.46-2.301-0.357-2.608c-0.818-0.306-1.688,1.483-2.301,3.732c0,0,4.184,2.241-2.944,6.464  c0,0,3.149-3.293,3.199-4.265c0.052-0.972-1.076-1.977-3.33,0.238c-1.652,1.623-3.979,0.832-5.714,2.038  c-1.558,1.083-2.82,4.163-3.634,9.843l4.856-0.001c0,0,1.636-1.636,2.045-2.045c0.409-0.409,3.726-2.063,6.669-4.048  c1.964-1.325,4.017-10.013,4.272-11.803S39.232,19.743,38.567,23.169z" />
-                    <path fill="currentColor" d="M14.88,28.769c-1.735-1.206-4.062-0.415-5.714-2.038c-2.254-2.215-3.382-1.21-3.33-0.238  c0.05,0.972,3.199,4.265,3.199,4.265c-7.128-4.223-2.944-6.464-2.944-6.464c-0.614-2.249-1.483-4.038-2.301-3.732  c-0.818,0.308-0.358,2.608-0.358,2.608c-0.665-3.426-3.017-4.244-2.761-2.454S2.98,31.192,4.944,32.518  c2.943,1.985,6.261,3.639,6.669,4.048c0.409,0.409,2.045,2.045,2.045,2.045l4.856,0.001C17.701,32.932,16.438,29.852,14.88,28.769z" />
-                    <path fill="currentColor" d="M32.667,15.057c0-6.443-5.224-11.668-11.667-11.668S9.332,8.613,9.332,15.057c0,6.444,5.224,11.668,11.668,11.668  S32.667,21.501,32.667,15.057z M24.14,20.344c-0.568,0.603-1.403,0.96-2.504,1.071v1.91h-1.229v-1.929  c-0.769-0.087-1.411-0.288-1.928-0.604c-0.517-0.314-1.008-0.714-1.474-1.196l1.584-1.215c0.184,0.174,0.363,0.341,0.538,0.501  c0.173,0.16,0.357,0.301,0.554,0.422c0.195,0.121,0.412,0.216,0.647,0.282c0.236,0.068,0.506,0.103,0.809,0.103  c0.524,0,0.919-0.145,1.186-0.436c0.265-0.29,0.398-0.646,0.398-1.066c0-0.439-0.137-0.818-0.409-1.137  c-0.274-0.318-0.614-0.613-1.02-0.886c-0.407-0.271-0.847-0.541-1.325-0.807c-0.476-0.266-0.919-0.565-1.328-0.899  c-0.411-0.334-0.752-0.72-1.025-1.159c-0.274-0.439-0.41-0.968-0.41-1.586c0-0.421,0.072-0.813,0.215-1.179  c0.145-0.364,0.354-0.693,0.627-0.986c0.273-0.295,0.609-0.538,1.014-0.733c0.402-0.194,0.85-0.322,1.345-0.385V6.789h1.229v1.642  c0.665,0.073,1.233,0.226,1.702,0.454c0.468,0.229,0.921,0.544,1.356,0.946l-1.562,1.27c-0.273-0.29-0.572-0.522-0.897-0.699  c-0.325-0.176-0.713-0.265-1.164-0.265c-0.531,0-0.942,0.134-1.23,0.398c-0.288,0.267-0.432,0.616-0.432,1.049  c0,0.488,0.196,0.919,0.588,1.289c0.256,0.229,0.549,0.431,0.874,0.607c0.325,0.176,0.638,0.354,0.942,0.533  c0.458,0.266,0.882,0.531,1.273,0.797c0.392,0.267,0.728,0.557,1.008,0.871c0.281,0.317,0.501,0.668,0.66,1.054  c0.159,0.387,0.237,0.834,0.237,1.341C24.993,18.985,24.708,19.74,24.14,20.344z" />
-                  </svg>
                 </div>
               </div>
             </div>
           </div>
-
 
           <!-- 
           <div class="row">
@@ -945,13 +937,21 @@
                   </tbody>
                 </table>
               </div>
-            </div>
 
-            <!-- <div class="col-xl-6">
-              <div class="owl_card_slider">
-                <div class="owl-carousel owl-theme card_owl" id="appendCard"></div>
+              <div class="owl_card_slider mt-5">
+                <div class="owl-carousel owl-theme card_owl" id="appendCard">
+                  <div class="item">
+                    <div class="slider_card">
+                      <p class="symbol_name">Refer your friends and earn</p>
+                      <div class="slider_card_content">
+                        <p>$25 in USDT</p>
+                      </div>
+                      <img src="./images/usdt-light.png" alt="" class="decoration">
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
@@ -1201,32 +1201,54 @@
         }
 
 
-        const card = `<div class="item">
-            <div class="slider_card">
-                <div class="card_symbol">
-                    <img src="./images/avax.svg"
-                        alt="Symbol Image" />
-                </div>
-                <p class="symbol_name">Symbol
-                    Name</p>
-                <div class="slider_card_content">
-                    <h6>2%</h6>
-                    <p>Receive 125% APY</p>
-                </div>
-                <button
-                    class="refer_btn boost_btn">Get
-                    Now</button>
-            </div>
-        </div>`;
-        for (let i = 0; i < 8; i++) {
+        const sliders = [
+          {
+            id: 1,
+            icons: './images/dai.svg',
+            parcentage: '12%',
+            bgLight: './images/dai-light.png',
+            bg: 'linear-gradient(-180deg, #FFCE64, #C79528)'
+          },
+          {
+            id: 2,
+            icons: './images/eth.svg',
+            parcentage: '14%',
+            bgLight: './images/eth-light.png',
+            bg: 'linear-gradient(-180deg, #8198F1, #526BCD)'
+          },
+          {
+            id: 3,
+            icons: './images/btc.svg',
+            parcentage: '11%',
+            bgLight: './images/btc-light.png',
+            bg: 'linear-gradient(-180deg, #F8C75D, #F7931A)'
+          },
+        ]
+
+        for (let i = 0; i < sliders.length; i++) {
+
+          const card = '<div class="item">' +
+            '<div class="slider_card" style="background-image:  ' + sliders[i].bg + ' ">' +
+            '<div class="card_symbol">' +
+            '<img src="' + sliders[i].icons + '" />' +
+            '</div>' +
+            '<div class="slider_card_content">' +
+            '<h6>Up to</h6>' +
+            '<p>' + sliders[i].parcentage + '<span>p.a.</span></p>' +
+            '</div>' +
+            '<img src="' + sliders[i].bgLight + '" alt="" class="decoration">' +
+            '</div>' +
+            '</div>';
+
           $("#appendCard").append(card);
         }
 
         $("#appendCard").owlCarousel({
-          items: 3.5,
+          items: 3,
           loop: true,
           margin: 10,
           nav: true,
+
           responsive: {
             375: {
               items: 3,
@@ -1235,7 +1257,7 @@
               items: 2.5,
             },
             991: {
-              items: 3,
+              items: 2,
             },
             1200: {
               items: 2,
