--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
                   </div>
                   <h4 class="amount"><span>$1200.</span><span>00</span></h4>
 
+                  <div class="d-flex align-items-center">
+                    <h4 class="amount_small mb-0">Available Balance : </h4>
+                    <p class="amount_small dark ms-2 fw-bold">$650.00</p>
+                  </div>
+
                 </div>
               </div>
               <div class="col-lg-4 mb-4 mb-lg-0">
@@ -302,74 +307,6 @@
             </div>
           </div>
 
-          <!-- 
-          <div class="row">
-            <div class="col-6 col-lg-3 mb-4">
-              <box class="earning_item">
-                <box class="earning_content">
-                  <p>1 Day</p>
-                  <h5>$0.00</h5>
-                </box>
-                <box class="earning_icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.4504 3.05006L6.7204 7.71006C5.8704 8.77006 6.1704 10.1301 7.3804 10.7301L11.1104 12.6001C11.6004 12.8401 12.4004 12.8401 12.8904 12.6001L16.6204 10.7301C17.8304 10.1201 18.1304 8.76006 17.2804 7.71006L13.5504 3.05006C12.7004 1.98006 11.3004 1.98006 10.4504 3.05006Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M12 2.2998V7.5598" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M7.7998 10.7101L11.9998 7.56006L16.1998 10.7101" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path opacity="0.4" d="M8.77011 14.4301L10.3801 15.1501C11.4101 15.6101 12.5901 15.6101 13.6301 15.1501L15.2401 14.4301C16.6801 13.7901 18.0101 15.5301 17.0101 16.7501L13.5501 20.9801C12.7001 22.0201 11.3101 22.0201 10.4501 20.9801L7.00011 16.7501C5.99011 15.5301 7.32011 13.7901 8.77011 14.4301Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                  </svg>
-                </box>
-              </box>
-            </div>
-            <div class="col-6 col-lg-3 mb-4">
-              <box class="earning_item">
-                <box class="earning_content">
-                  <p>7 Day</p>
-                  <h5>$0.00</h5>
-                </box>
-                <box class="earning_icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.4504 3.05006L6.7204 7.71006C5.8704 8.77006 6.1704 10.1301 7.3804 10.7301L11.1104 12.6001C11.6004 12.8401 12.4004 12.8401 12.8904 12.6001L16.6204 10.7301C17.8304 10.1201 18.1304 8.76006 17.2804 7.71006L13.5504 3.05006C12.7004 1.98006 11.3004 1.98006 10.4504 3.05006Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M12 2.2998V7.5598" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M7.7998 10.7101L11.9998 7.56006L16.1998 10.7101" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path opacity="0.4" d="M8.77011 14.4301L10.3801 15.1501C11.4101 15.6101 12.5901 15.6101 13.6301 15.1501L15.2401 14.4301C16.6801 13.7901 18.0101 15.5301 17.0101 16.7501L13.5501 20.9801C12.7001 22.0201 11.3101 22.0201 10.4501 20.9801L7.00011 16.7501C5.99011 15.5301 7.32011 13.7901 8.77011 14.4301Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                  </svg>
-                </box>
-              </box>
-            </div>
-            <div class="col-6 col-lg-3 mb-4">
-              <box class="earning_item">
-                <box class="earning_content">
-                  <p>30 Day</p>
-                  <h5>$0.00</h5>
-                </box>
-                <box class="earning_icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.4504 3.05006L6.7204 7.71006C5.8704 8.77006 6.1704 10.1301 7.3804 10.7301L11.1104 12.6001C11.6004 12.8401 12.4004 12.8401 12.8904 12.6001L16.6204 10.7301C17.8304 10.1201 18.1304 8.76006 17.2804 7.71006L13.5504 3.05006C12.7004 1.98006 11.3004 1.98006 10.4504 3.05006Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M12 2.2998V7.5598" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M7.7998 10.7101L11.9998 7.56006L16.1998 10.7101" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path opacity="0.4" d="M8.77011 14.4301L10.3801 15.1501C11.4101 15.6101 12.5901 15.6101 13.6301 15.1501L15.2401 14.4301C16.6801 13.7901 18.0101 15.5301 17.0101 16.7501L13.5501 20.9801C12.7001 22.0201 11.3101 22.0201 10.4501 20.9801L7.00011 16.7501C5.99011 15.5301 7.32011 13.7901 8.77011 14.4301Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                  </svg>
-                </box>
-              </box>
-            </div>
-            <div class="col-6 col-lg-3 mb-4">
-              <box class="earning_item">
-                <box class="earning_content">
-                  <p>Life Time</p>
-                  <h5>$0.00</h5>
-                </box>
-                <box class="earning_icon">
-                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M10.4504 3.05006L6.7204 7.71006C5.8704 8.77006 6.1704 10.1301 7.3804 10.7301L11.1104 12.6001C11.6004 12.8401 12.4004 12.8401 12.8904 12.6001L16.6204 10.7301C17.8304 10.1201 18.1304 8.76006 17.2804 7.71006L13.5504 3.05006C12.7004 1.98006 11.3004 1.98006 10.4504 3.05006Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M12 2.2998V7.5598" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path d="M7.7998 10.7101L11.9998 7.56006L16.1998 10.7101" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                    <path opacity="0.4" d="M8.77011 14.4301L10.3801 15.1501C11.4101 15.6101 12.5901 15.6101 13.6301 15.1501L15.2401 14.4301C16.6801 13.7901 18.0101 15.5301 17.0101 16.7501L13.5501 20.9801C12.7001 22.0201 11.3101 22.0201 10.4501 20.9801L7.00011 16.7501C5.99011 15.5301 7.32011 13.7901 8.77011 14.4301Z" stroke="currentColor" strokeWidth="1.5" strokeMiterlimit="10" strokeLinecap="round" strokeLinejoin="round" />
-                  </svg>
-                </box>
-              </box>
-            </div>
-          </div> -->
-
           <div class="row">
             <div class="col-lg-6">
               <div class="assets_title">Assets</div>
@@ -387,10 +324,10 @@
                   <tbody id="">
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/avax.svg' class='symol' />
                           <span class='symbol_name'>Avax</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -428,10 +365,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/bnb.svg' class='symol' />
                           <span class='symbol_name'>Bnb</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -469,10 +406,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/usdc.svg' class='symol' />
                           <span class='symbol_name'>USDC</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -510,10 +447,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/usdt.svg' class='symol' />
                           <span class='symbol_name'>USDT</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -551,10 +488,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/btc.svg' class='symol' />
                           <span class='symbol_name'>BTC</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -592,10 +529,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/dai.svg' class='symol' />
                           <span class='symbol_name'>DAI</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -633,10 +570,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/eth.svg' class='symol' />
                           <span class='symbol_name'>ETH</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -674,10 +611,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/tusd.svg' class='symol' />
                           <span class='symbol_name'>TUSD</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -715,10 +652,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/avax.svg' class='symol' />
                           <span class='symbol_name'>Avax</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -756,10 +693,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/bnb.svg' class='symol' />
                           <span class='symbol_name'>Bnb</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -797,10 +734,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/usdc.svg' class='symol' />
                           <span class='symbol_name'>USDC</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -838,10 +775,10 @@
                     </tr>
                     <tr>
                       <td>
-                        <Box class='assets'>
+                        <a href="https://aeron-normal.vercel.app" class='assets'>
                           <img src='./images/usdt.svg' class='symol' />
                           <span class='symbol_name'>USDT</span>
-                        </Box>
+                        </a>
                       </td>
                       <td>
                         <Box class='assets_capital'>
@@ -1156,7 +1093,7 @@
 
         const tr = `<tr>
             <td>
-                <Box class='assets'>
+                <a href="https://aeron-normal.vercel.app" class='assets'>
                     <img src='https://app.yield.app/assets/avax-symbol-1770e468.svg' class='symol' />
                     <span class='symbol_name'>Avax</span>
                 </Box>
